Show full detail's information

--- a/app/src/main/res/layout/user_detail.xml
+++ b/app/src/main/res/layout/user_detail.xml
@@ -5,228 +5,296 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/white">
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingRight="@dimen/padding_large">
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_person"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_marginLeft="16sp"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Andrew"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"/>
-
-            <TextView
-                    android:id="@+id/tv_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="/@andrew"
-                    android:textColor="@color/gray"
-                    android:textSize="16sp"/>
-
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/divider"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingRight="@dimen/padding_large">
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_phone"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="16sp"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/tv_phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="+6587927079"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/divider"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingRight="@dimen/padding_large">
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_email"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="16sp"
-                android:orientation="vertical">
-            <TextView
-                    android:id="@+id/tv_email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="hshs@gmail.com"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/divider"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingRight="@dimen/padding_large">
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_info"/>
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="16sp"
-                android:orientation="vertical">
-            <TextView
-                    android:id="@+id/tv_website"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ntt.com"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/divider"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingRight="@dimen/padding_large">
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_home"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="16sp"
-                android:orientation="vertical">
-            <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="79 Mount Sinai"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/divider"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:paddingLeft="@dimen/padding_large"
-            android:paddingTop="@dimen/padding_large"
-            android:paddingRight="@dimen/padding_large">
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_phone"/>
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="16sp"
-                android:orientation="vertical">
-            <TextView
-                    android:id="@+id/tv_company"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ABC"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"/>
-            <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/divider"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
+	
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/padding_large"
+			android:paddingTop="@dimen/padding_large"
+			android:paddingRight="@dimen/padding_large">
+		
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_person"/>
+		
+		<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:textColor="@color/colorPrimaryDark"
+				android:layout_marginLeft="@dimen/padding_large"
+				android:orientation="vertical">
+			
+			<TextView
+					android:id="@+id/tv_name"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:text="Andrew"
+					android:textColor="@color/black"
+					android:textSize="@dimen/text_size_large"/>
+			
+			<TextView
+					android:id="@+id/tv_username"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:text="/@andrew"
+					android:textColor="@color/gray"
+					android:textSize="@dimen/text_size_medium"/>
+			
+			<View
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/divider_height"
+					android:layout_marginTop="@dimen/padding_large"
+					android:background="@color/divider"/>
+		</LinearLayout>
+	
+	</LinearLayout>
+	
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/padding_large"
+			android:paddingTop="@dimen/padding_large"
+			android:paddingRight="@dimen/padding_large">
+		
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_phone"/>
+		
+		<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_marginLeft="@dimen/padding_large"
+				android:orientation="vertical">
+			
+			<TextView
+					android:id="@+id/tv_phone"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:text="+6587927079"
+					android:textColor="@color/black"
+					android:textSize="@dimen/text_size_large"/>
+			<View
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/divider_height"
+					android:layout_marginTop="@dimen/padding_large"
+					android:background="@color/divider"/>
+		
+		</LinearLayout>
+	
+	</LinearLayout>
+	
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/padding_large"
+			android:paddingTop="@dimen/padding_large"
+			android:paddingRight="@dimen/padding_large">
+		
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_email"/>
+		
+		<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_marginLeft="@dimen/padding_large"
+				android:orientation="vertical">
+			<TextView
+					android:id="@+id/tv_email"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:text="hshs@gmail.com"
+					android:textColor="@color/black"
+					android:textSize="@dimen/text_size_large"/>
+			<View
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/divider_height"
+					android:layout_marginTop="@dimen/padding_large"
+					android:background="@color/divider"/>
+		</LinearLayout>
+	
+	</LinearLayout>
+	
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/padding_large"
+			android:paddingTop="@dimen/padding_large"
+			android:paddingRight="@dimen/padding_large">
+		
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_home"/>
+		<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_marginLeft="@dimen/padding_large"
+				android:orientation="vertical">
+			<TextView
+					android:id="@+id/tv_website"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:text="ntt.com"
+					android:layout_gravity="center_vertical"
+					android:textColor="@color/black"
+					android:textSize="@dimen/text_size_large"/>
+			<View
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/divider_height"
+					android:layout_marginTop="@dimen/padding_large"
+					android:background="@color/divider"/>
+		</LinearLayout>
+	
+	</LinearLayout>
+	
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/padding_large"
+			android:paddingTop="@dimen/padding_large"
+			android:paddingRight="@dimen/padding_large">
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_location"/>
+		
+		<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_marginLeft="@dimen/padding_large"
+				android:orientation="vertical">
+			<TextView
+					android:id="@+id/tv_address"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					tools:text="79 Mount Sinai"
+					android:textColor="@color/black"
+					android:textSize="@dimen/text_size_large"/>
+			<View
+					android:layout_width="match_parent"
+					android:layout_height="@dimen/divider_height"
+					android:layout_marginTop="@dimen/padding_large"
+					android:background="@color/divider"/>
+		</LinearLayout>
+	
+	</LinearLayout>
+	
+	<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			
+			android:paddingLeft="@dimen/padding_large"
+			android:paddingTop="@dimen/padding_large"
+			android:paddingRight="@dimen/padding_large">
+		
+		<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:src="@drawable/ic_info"/>
+		<LinearLayout android:layout_width="match_parent"
+		              android:layout_height="wrap_content"
+		              android:orientation="vertical">
+			
+			<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:layout_marginLeft="@dimen/padding_large"
+					android:orientation="vertical">
+				<TextView
+						android:id="@+id/tv_company"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						tools:text="ABC"
+						android:textColor="@color/black"
+						android:textSize="@dimen/text_size_large"/>
+				
+				<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/company_name"
+						android:textColor="@color/gray"
+						android:textSize="@dimen/text_size_medium"/>
+				<View
+						android:layout_width="match_parent"
+						android:layout_height="@dimen/divider_height"
+						android:layout_marginTop="@dimen/padding_large"
+						android:background="@color/divider"/>
+			
+			</LinearLayout>
+			<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:textColor="@color/colorPrimaryDark"
+					android:layout_marginTop="@dimen/padding_large"
+					android:layout_marginLeft="@dimen/padding_large"
+					android:orientation="vertical">
+				
+				<TextView
+						android:id="@+id/tv_catchphrase"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						tools:text="Andrew"
+						android:textColor="@color/black"
+						android:textSize="@dimen/text_size_large"/>
+				
+				<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/catchphrase"
+						android:textColor="@color/gray"
+						android:textSize="@dimen/text_size_medium"/>
+				
+				<View
+						android:layout_width="match_parent"
+						android:layout_height="@dimen/divider_height"
+						android:layout_marginTop="@dimen/padding_large"
+						android:background="@color/divider"/>
+			</LinearLayout>
+			
+			<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:textColor="@color/colorPrimaryDark"
+					android:layout_marginTop="@dimen/padding_large"
+					android:layout_marginLeft="@dimen/padding_large"
+					android:orientation="vertical">
+				
+				<TextView
+						android:id="@+id/tv_bs"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						tools:text="Andrew"
+						android:textColor="@color/black"
+						android:textSize="@dimen/text_size_large"/>
+				
+				<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/bs"
+						android:textColor="@color/gray"
+						android:textSize="@dimen/text_size_medium"/>
+				
+				<View
+						android:layout_width="match_parent"
+						android:layout_height="@dimen/divider_height"
+						android:layout_marginTop="@dimen/padding_large"
+						android:background="@color/divider"/>
+			</LinearLayout>
+		</LinearLayout>
+	
+	
+	</LinearLayout>
 
 </LinearLayout>
