--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
 	<dimen name="padding_xsmall">4dp</dimen>
 	<dimen name="text_size_xlarge">20sp</dimen>
 	<dimen name="spinner_height">45dp</dimen>
+	<dimen name="divider_height">1dp</dimen>
 </resources>
